# python-cli-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  python_cli_template.html  search.js
.github/: CONTRIBUTING.md  mergify.yml
.github/workflows/: docs.yml  lint.yml  release-please.yml  release.yml  test.yml
src/python_cli_template/: cli.py
