[project]
name = "python-cli-template"
version = "0.0.0"
authors = [
    { name="Mark", email="mark@remarkablemark.org" },
]
description = "Python CLI Template"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = []

[project.scripts]
python-cli-template = "python_cli_template.cli:main"

[project.entry-points."pipx.run"]
python-cli-template = "python_cli_template.cli:main"

[project.entry-points."uv.run"]
python-cli-template = "python_cli_template.cli:main"

[project.optional-dependencies]
build = [
    "build==1.4.4",
    "pyinstaller==6.20.0",
    "twine==6.2.0",
]
docs = [
    "pdoc==16.0.0",
]
lint = [
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "ruff==0.15.11",
]
test = [
    "coverage==7.13.5",
    "pytest==9.0.3",
]

[project.urls]
Homepage = "https://github.com/remarkablemark/python-cli-template"
Issues = "https://github.com/remarkablemark/python-cli-template/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001",  # unused arguments in functions
]
ignore = [
    "E501",  # line too long (handled by ruff)
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    '^tests/.*'
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "/opt/*",
    "/tmp/*",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
fail_under = 100

[tool.coverage.html]
show_contexts = true
